# derivation-resolver

./: Cargo.toml  README.md
src/: derive.rs  error.rs  interface.rs  main.rs  print.rs  utils.rs  visitor.rs
src/systems/: mod.rs
src/systems/common/: derive.rs  env.rs  eval.rs  grammar.pest  judgement.rs  mod.rs  parser.rs  print.rs  rules.rs  syntax.rs  ty.rs  tyck.rs  value.rs
src/systems/eval_ml_3/: derive.rs  eval.rs  grammar.pest  mod.rs  parser.rs  rules.rs  syntax.rs  visitor.rs
src/systems/eval_ml_4/: derive.rs  grammar.pest  mod.rs  parser.rs  rules.rs  syntax.rs
src/systems/poly_ml_4/: grammar.pest  mod.rs  syntax.rs  tyck.rs
