[package]
name = "derivation-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
replace_with = "0.1.7"
alphabet = "0.2.2"

[features]
default = ["eval-ml-3"]
eval-ml-3 = []
eval-ml-4 = []
